change the port, add authentication filter with header parameters