@@ -1,22 +1,24 @@
 package auto.trace.dto;
 
 import auto.trace.entity.Role;
+import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 public class CustomUserDetails implements UserDetails {
 
+    @Getter
+    private final Long id;
     private final String email;
     private final String password;
     private final Set<Role> roles;
 
-    public CustomUserDetails(String email, String password, Set<Role> roles) {
+    public CustomUserDetails(Long id, String email, String password, Set<Role> roles) {
+        this.id = id;
         this.email = email;
         this.password = password;
         this.roles = roles;
@@ -26,7 +28,7 @@ public class CustomUserDetails implements UserDetails {
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return roles.stream()
                 .map(role -> new SimpleGrantedAuthority(role.getName().name()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
